# surrealdb-schema-derive

./: Cargo.toml
impl/: Cargo.toml
impl/src/: errors.rs  lib.rs
impl/src/codegen/: crud_statements.rs  define_statements.rs  mod.rs  object_conversion.rs  row_struct.rs  types.rs
impl/src/runtime/: mod.rs  reference.rs  surreal_execution.rs  surreal_query_generation.rs  surreal_value_primitives.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs
