[package]
name = "surrealdb-schema-derive-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
surrealdb = { version = "1.0.0-beta.8", default-features = false, features=["kv-mem"]}
async-trait = "0.1.58"
derive_builder = "0.11.2"
anyhow = "1.0.66"
thiserror = "1.0.37"

[dev-dependencies]
prettyplease = "0.1.21"
